# LOF-CS595

labs/abstractivehealth/: ah_data_extraction.py
labs/abstractivehealth/services/: ah_services.py
labs/ai_assisted_local_llm/: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  session2_planning_document.md
labs/ai_assisted_local_llm/app/: config.py  main.py
labs/ai_assisted_local_llm/app/api/: cases.py  deps.py  transcripts.py
labs/ai_assisted_local_llm/app/db/: connection.py  queries.py  schema.sql
labs/ai_assisted_local_llm/app/evaluation/: __init__.py  engine.py  prompts.py  router.py  rubrics.py  schemas.py
labs/ai_assisted_local_llm/app/schemas/: __init__.py  api_models.py  medical_case.py
labs/ai_assisted_local_llm/app/services/: __init__.py  cache_service.py  llm_provider.py  llm_service.py
labs/ai_assisted_local_llm/docs/: architecture.md
labs/ai_assisted_local_llm/frontend/: api_client.py  evaluation_dashboard.py  interview_app.py  streamlit_app.py
labs/ai_assisted_local_llm/frontend/.eval_prefill/: 560730ed-4a8d-4073-b770-f7b9b03bef0a.json  97b8d55f-2529-4ee2-b6d9-b9af163f7cf6.json  d07d1102-b81f-4fdb-a00c-772c066d3863.json  latest_eval_payload.json
labs/ai_assisted_local_llm/sample_data/: sample_case_chest_pain.json  sample_transcript_good.json  sample_transcript_poor.json
lof/: services.py
